dataset1235/2025-2/2868285114/users/1072499734/executions/3071719669_2086141900.log
== SUBMISSION (2025-08-28 22:40:12)
-- CODE: 
import math

lado = float(input())
apotema = lado / (2 * math.tan(math.pi /))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:40:11)
-- CODE: 
import math

lado = float(input())
apotema = lado / (2 * math.tan(math.pi /))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:40:45)
-- CODE: 
import math
lado = float(input())
apotema = lado / (2 * math.tan(math.pi /11))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:05)
-- CODE: 
import math
lado = float(input())
apotema = lado / (2 * math.tan(math.pi /))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:40:11)
-- CODE: 
import math

lado = float(input())
apotema = lado / (2 * math.tan(math.pi /))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.00333333
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 4
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:38:22)
-- CODE: 
import math
apotema = lado / (2 * math.tan(math.pi /))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 2
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 2
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 2
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 2
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 2
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 2
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:51:15)
-- CODE: 
import math
lado = float(input())
apotema = lado / (2 * math.tan(math.pi /11))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:02)
-- CODE: 
import math
lado = float(input())
apotema = lado / (2 * math.tan(math.pi /))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:04)
-- CODE: 
import math
lado = float(input())
apotema = lado / (2 * math.tan(math.pi /))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:39:03)
-- CODE: 
import math
lado = float(input())
apotema = lado / (2 * math.tan(math.pi /))
area = (11 * lado * apotema) / 2
print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2 * math.tan(math.pi /))
                                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
